; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/st/extr_clkgen-pll.c_clk_pll3200c32_get_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/st/extr_clkgen-pll.c_clk_pll3200c32_get_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stm_pll = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.stm_pll*, i64*)* @clk_pll3200c32_get_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clk_pll3200c32_get_rate(i64 %0, %struct.stm_pll* %1, i64* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.stm_pll*, align 8
  %6 = alloca i64*, align 8
  store i64 %0, i64* %4, align 8
  store %struct.stm_pll* %1, %struct.stm_pll** %5, align 8
  store i64* %2, i64** %6, align 8
  %7 = load %struct.stm_pll*, %struct.stm_pll** %5, align 8
  %8 = getelementptr inbounds %struct.stm_pll, %struct.stm_pll* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %3
  %12 = load %struct.stm_pll*, %struct.stm_pll** %5, align 8
  %13 = getelementptr inbounds %struct.stm_pll, %struct.stm_pll* %12, i32 0, i32 0
  store i32 1, i32* %13, align 4
  br label %14

14:                                               ; preds = %11, %3
  %15 = load i64, i64* %4, align 8
  %16 = udiv i64 %15, 1000
  %17 = mul i64 2, %16
  %18 = load %struct.stm_pll*, %struct.stm_pll** %5, align 8
  %19 = getelementptr inbounds %struct.stm_pll, %struct.stm_pll* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = sext i32 %20 to i64
  %22 = mul i64 %17, %21
  %23 = load %struct.stm_pll*, %struct.stm_pll** %5, align 8
  %24 = getelementptr inbounds %struct.stm_pll, %struct.stm_pll* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = sext i32 %25 to i64
  %27 = udiv i64 %22, %26
  %28 = mul i64 %27, 1000
  %29 = load i64*, i64** %6, align 8
  store i64 %28, i64* %29, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
